--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <div id="end">
         <h1>You Win!</h1>
         <h4 id="final-score"></h4>
-        <a href="Memory Game.html" id="restart-button" class="btn btn-primary btn-lg p-4">Play Again?</a>
+        <a href="index.html" id="restart-button" class="btn btn-primary btn-lg p-4">Play Again?</a>
     </div>
     <script src="Memory Game.js"></script>
 </body>
